# aw_connector_example

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/aw_connector_example/: dependencies.py  dto.py  main.py  settings.py
src/aw_connector_example/data/db1/public/: table1.json  table2.json  table3.json
src/aw_connector_example/data/db1/work/: table4.json
src/aw_connector_example/routers/: __init__.py  health.py
src/aw_connector_example/routers/data_source/: __init__.py  object_data.py  object_meta.py  objects.py  parquet.py  ping.py  sql_data.py  sql_meta.py
src/aw_connector_example/services/: parquet.py  parquet_queue.py  repo.py
tests/: Dockerfile
tests/aw_connector_tests/: conftest.py
tests/aw_connector_tests/end2end/: test_object_data.py  test_object_meta.py  test_objects.py  test_ping.py  test_sql_data.py  test_sql_meta.py
